added example notebook to build a map in Altair

--- a/notebooks/building_base_map.ipynb
+++ b/notebooks/building_base_map.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Building a base map\n",
+    "# Building a base map in Altair\n",
     "\n",
     "#### Editing in MapShaper\n",
     "\n",
@@ -84,7 +84,7 @@
     }
    ],
    "source": [
-    "base_1 = gpd.read_file('small_bay_topo.json')\n",
+    "base_1 = gpd.read_file('../project_flask/static/data/small_bay_topo.json')\n",
     "base_1.head()"
    ]
   },
@@ -113,12 +113,12 @@
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-0357d3b49ac94390ae658b2ee1898dcf\"></div>\n",
+       "<div id=\"altair-viz-2b9d0f9348a84364963a46ebddc0239d\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-0357d3b49ac94390ae658b2ee1898dcf\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-0357d3b49ac94390ae658b2ee1898dcf\");\n",
+       "    if (outputDiv.id !== \"altair-viz-2b9d0f9348a84364963a46ebddc0239d\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-2b9d0f9348a84364963a46ebddc0239d\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
